<resources>
    <string name="app_name">Meus Clientes</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Cliente</string>
    <string name="nav_header_subtitle">Profº Marco Maddo</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Sair</string>

    <string name="modelo_fragment">Cliente VIP DEMO</string>

    <!-- Opções do Menu Lateral Drawer -->
    <string name="fragmento_adicionar_cliente">Adiconar cliente</string>
    <string name="fragmento_adicionar_cliente_card">Adiconar cliente Card</string>
    <string name="titulo_preto">Preto</string>
    <string name="fragmento_vermelho">Fragmento Vermelho</string>
    <string name="titulo_vermelho">Vermelho</string>
    <string name="fragmento_azul">Fragmento Azul</string>
    <string name="titulo_azul">Azul</string>

    <!-- Opções do Menu Principal -->
    <string name="meu_perfil">Meu Perfil</string>
    <string name="adicionar_novo_cliente">Adicionar Novo Cliente</string>
    <string name="nome_completo">Nome Completo</string>
    <string name="telefone">Telefone</string>
    <string name="cep">Cep</string>
    <string name="logadouro">Logadouro</string>
    <string name="numero">Número</string>
    <string name="bairro">Bairro</string>
    <string name="cidade">Cidade</string>
    <string name="estado">Estado</string>
    <string name="termos_de_uso">Termos de uso</string>
    <string name="salvar">Salvar</string>
    <string name="cancelar">Cancelar</string>
    <string name="email">E-mail</string>
    <string name="lista_de_clientes">Lista de Clientes</string>
    <string name="pesquisar_por_nome">Pesquisar por nome</string>
    <string name="listar_clientes">Listar Clientes</string>
    <string name="listar_clientes_card">Listar Clientes Card</string>

</resources>
