<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.fragments.AdiconarClienteFragment"
    android:layout_margin="2dp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.cardview.widget.CardView
                android:id="@+id/cwCabecalho"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                app:cardCornerRadius="8dp"
                app:cardElevation="8dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:src="@mipmap/ic_launcher" />


                    <TextView
                        android:id="@+id/txtTitulo"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:layout_marginTop="16dp"
                        android:gravity="center"
                        android:text="@string/adicionar_novo_cliente"
                        android:textColor="@color/preto"
                        android:textSize="28sp"
                        android:textStyle="bold" />
                </androidx.appcompat.widget.LinearLayoutCompat>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cv1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                app:cardCornerRadius="8dp"
                app:cardElevation="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/cwCabecalho">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/etNome"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:hint="@string/nome_completo"
                        android:inputType="text"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />


                    <EditText
                        android:id="@+id/etTelefone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:hint="@string/telefone"
                        android:inputType="phone"
                        app:layout_constraintStart_toStartOf="@id/etNome"
                        app:layout_constraintTop_toBottomOf="@id/etNome" />

                    <EditText
                        android:id="@+id/etEmail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:hint="@string/email"
                        android:inputType="textEmailAddress"
                        app:layout_constraintStart_toStartOf="@id/etTelefone"
                        app:layout_constraintTop_toBottomOf="@id/etTelefone" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cv2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                app:cardCornerRadius="8dp"
                app:cardElevation="8dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/cv1">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">


                    <EditText
                        android:id="@+id/etCep"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:hint="@string/cep"
                        android:inputType="number"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <EditText
                        android:id="@+id/etLogadouro"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:hint="@string/logadouro"
                        android:inputType="text"
                        app:layout_constraintStart_toStartOf="@id/etCep"
                        app:layout_constraintTop_toBottomOf="@id/etCep" />

                    <EditText
                        android:id="@+id/etNumero"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:hint="@string/numero"
                        android:inputType="text"
                        app:layout_constraintStart_toStartOf="@id/etLogadouro"
                        app:layout_constraintTop_toBottomOf="@id/etLogadouro" />

                    <EditText
                        android:id="@+id/etBairro"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:hint="@string/bairro"
                        android:inputType="text"
                        app:layout_constraintStart_toStartOf="@id/etNumero"
                        app:layout_constraintTop_toBottomOf="@id/etNumero" />

                    <EditText
                        android:id="@+id/etCidade"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:hint="@string/cidade"
                        android:inputType="text"
                        app:layout_constraintStart_toStartOf="@id/etBairro"
                        app:layout_constraintTop_toBottomOf="@id/etBairro" />

                    <EditText
                        android:id="@+id/etEstado"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:hint="@string/estado"
                        android:inputType="text"
                        app:layout_constraintStart_toStartOf="@id/etCidade"
                        app:layout_constraintTop_toBottomOf="@id/etCidade" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                app:cardCornerRadius="8dp"
                app:cardElevation="8dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/cv2">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="8dp"
                    app:cardCornerRadius="8dp"
                    app:cardElevation="4dp">


                    <CheckBox
                        android:id="@+id/cbTermosDeUso"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:checked="false"
                        android:text="@string/termos_de_uso"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/btnSalvar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/salvar"
                        android:textAllCaps="true"
                        style="@style/BotaoSalvarCustomizado"
                        app:layout_constraintBottom_toBottomOf="@id/btnCancelar"
                        app:layout_constraintEnd_toEndOf="parent" />

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/btnCancelar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/cancelar"
                        android:textAllCaps="true"
                        style="@style/BotaoCancelarCustomizado"
                        app:layout_constraintBottom_toBottomOf="@id/cbTermosDeUso"
                        app:layout_constraintEnd_toStartOf="@id/btnSalvar" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</FrameLayout>
